--- a/gestaourbana/templates/500.html
+++ b/gestaourbana/templates/500.html
@@ -10,8 +10,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-        <h1>Internal server error</h1>
-
-        <h2>Sorry, there seems to be an error. Please try again soon.</h2>
+        <div class="container">
+            <div class="row">
+                <h1>Internal server error</h1>
+                <p>Sorry, there seems to be an error. Please try again soon.</p>
+            </div>
+        </div>
     </body>
 </html>
