--- a/gestaourbana/templates/base.html
+++ b/gestaourbana/templates/base.html
@@ -24,14 +24,14 @@
 
         {# Global stylesheets #}
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.min.css' %}">
-
-        {# Main JavaScript #}
-        <script type="text/javascript" href="{% static 'js/bundle.min.css' %}"></script>
     </head>
 
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
-
-        {% block content %}{% endblock %}
+        <div class="container">
+            {% block content %}{% endblock %}
+        </div>
+        {# Main JavaScript #}
+        <script src="{% static 'js/bundle.min.js' %}"></script>
     </body>
 </html>
