Adiciona o footer e o header.

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -63,4 +63,20 @@
 			{% endfor %}
 		{% endif %}
 	{% endwith %}
+
+	{% for news in newspages %}
+		{% with news=news.specific %}
+			<h2><a href="{% pageurl news %}">{{ news.title }}</a></h2>
+
+			{% with news.main_image as main_image %}
+				{% if main_image %}
+					{% image main_image fill-160x100 %}
+				{% endif %}
+			{% endwith %}
+
+			{{ news.intro }}
+			{{ news.body|richtext }}
+		{% endwith %}
+	{% endfor %}
+
 {% endblock %}
