--- a/gestaourbana/templates/base.html
+++ b/gestaourbana/templates/base.html
@@ -1,5 +1,4 @@
 {% load static wagtailuserbar %}
-{% load render_bundle from webpack_loader %}
 
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -29,7 +28,9 @@
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
         <div class="container">
+            {% include "includes/header.html" %}
             {% block content %}{% endblock %}
+            {% include "includes/footer.html" %}
         </div>
         {# Main JavaScript #}
         <script src="{% static 'js/bundle.min.js' %}"></script>
