Fixes #1 - Arruma parcialmente a navegação
Ajustar toggle de subitens

--- a/gestaourbana/templates/nav_menu.html
+++ b/gestaourbana/templates/nav_menu.html
@@ -63,13 +63,13 @@
                         <li class="terceiro_nivel"><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/eixos-de-transformacao/arquivos/">Arquivos</a></li>
                     </ul>
                 </li>
-                <li class="segundo_nivel"><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/">Operações Urbanas</a></li>
+                <li class="segundo_nivel"><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/">Operações Urbanas</a>
                     <ul>
                         <li class="terceiro_nivel"><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/operacao-consorciada-agua-branca/">OUC Água Branca</a>
                             <ul>
-                                <li><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/operacao-consorciada-agua-branca/plano-de-urbanizacao-do-subsetor-a1/">Plano de Urbanização do Subsetor A1</a></li>
-                                <li><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/operacao-consorciada-agua-branca/revisao-da-lei/">Revisão da Lei</a></li>
-                                <li><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/operacao-consorciada-agua-branca/arquivos/">Arquivos</a></li>
+                                <li class="quarto_nivel"><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/operacao-consorciada-agua-branca/plano-de-urbanizacao-do-subsetor-a1/">Plano de Urbanização do Subsetor A1</a></li>
+                                <li class="quarto_nivel"><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/operacao-consorciada-agua-branca/revisao-da-lei/">Revisão da Lei</a></li>
+                                <li class="quarto_nivel"><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/operacao-consorciada-agua-branca/arquivos/">Arquivos</a></li>
                             </ul>
                         </li>
                         <li class="terceiro_nivel"><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/oucae/">OUC Água Espraiada</a></li>
@@ -78,10 +78,10 @@
                         <li class="terceiro_nivel"><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/oucbt/">OUC Bairros do Tamanduateí</a>
                             <ul>
                                 <li class="quarto_nivel"><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/oucbt/o-pde-e-o-arco-tamanduatei/">O PDE e o Arco Tamanduateí</a></li>
-                                <li class="quarto_nivel><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/oucbt/a-cidade-que-queremos/">A Cidade Que Queremos</a></li>
-                                <li class="quarto_nivel><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/oucbt/processo-participativo/">Processo Participativo</a></li>
-                                <li class="quarto_nivel><a href="http://minutabt.gestaourbana.prefeitura.sp.gov.br/">Minuta Participativa</a></li>
-                                <li class="quarto_nivel><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/oucbt/arquivos/">Arquivos do PL</a></li>
+                                <li class="quarto_nivel"><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/oucbt/a-cidade-que-queremos/">A Cidade Que Queremos</a></li>
+                                <li class="quarto_nivel"><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/oucbt/processo-participativo/">Processo Participativo</a></li>
+                                <li class="quarto_nivel"><a href="http://minutabt.gestaourbana.prefeitura.sp.gov.br/">Minuta Participativa</a></li>
+                                <li class="quarto_nivel"><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/operacoes-urbanas/oucbt/arquivos/">Arquivos do PL</a></li>
                             </ul>
                         </li>
                     </ul>
