--- a/gestaourbana/templates/nav_menu.html
+++ b/gestaourbana/templates/nav_menu.html
@@ -1,6 +1,156 @@
 <div id="menu_container">
 <nav>
-    <ul>
+<div id='logo'><a href="#"><img src="http://placehold.it/240x100"></a></div>
+<ul class="nav-menu">
+	<li class="has-children">
+		<input type="checkbox" name="nav-0" id="nav-0">
+		<label for="nav-0">nav 0</label>
+		<ul>
+			<li class="has-children">
+				<input type="checkbox" name ="nav-0-0" id="nav-0-0">
+				<label for="nav-0-0">nav 0 0</label>
+				<ul>
+					<li><a href="#0">Link</a></li>
+					<li><a href="#0">Link</a></li>
+					<li><a href="#0">Link</a></li>
+
+					<li class="has-children">
+		  				<input type="checkbox" name ="nav-0-0-0" id="nav-0-0-0">
+						<label for="nav-0-0-0">nav 0 0 0</label>
+						<ul>
+							<li><a href="#0">Link</a></li>
+							<li><a href="#0">Link</a></li>
+							<li><a href="#0">Link</a></li>
+						</ul>
+					</li>
+
+				</ul>
+			</li>
+  			<li><a href="#0">Link</a></li>
+			<li><a href="#0">Link</a></li>
+  		</ul>
+	</li>
+
+	<li class="has-children">
+		<input type="checkbox" name="nav-1" id="nav-1">
+		<label for="nav-1">nav 1</label>
+		<ul>
+			<li class="has-children">
+				<input type="checkbox" name ="nav-1-0" id="nav-1-0">
+				<label for="nav-1-0">nav 1 0</label>
+				<ul>
+					<li><a href="#0">Link</a></li>
+					<li><a href="#0">Link</a></li>
+					<li><a href="#0">Link</a></li>
+
+					<li class="has-children">
+		  				<input type="checkbox" name ="nav-1-0-0" id="nav-1-0-0">
+						<label for="nav-1-0-0">nav 1 0 0</label>
+						<ul>
+							<li><a href="#0">Link</a></li>
+							<li><a href="#0">Link</a></li>
+							<li><a href="#0">Link</a></li>
+						</ul>
+					</li>
+
+				</ul>
+			</li>
+  			<li><a href="#0">Link</a></li>
+			<li><a href="#0">Link</a></li>
+  		</ul>
+	</li>
+
+	<li class="has-children">
+		<input type="checkbox" name="nav-2" id="nav-2">
+		<label for="nav-2">nav 2</label>
+		<ul>
+			<li class="has-children">
+				<input type="checkbox" name ="nav-2-0" id="nav-2-0">
+				<label for="nav-2-0">nav 2 0</label>
+				<ul>
+					<li><a href="#0">Link</a></li>
+					<li><a href="#0">Link</a></li>
+					<li><a href="#0">Link</a></li>
+
+					<li class="has-children">
+		  				<input type="checkbox" name ="nav-2-0-0" id="nav-2-0-0">
+						<label for="nav-2-0-0">nav 2 0 0</label>
+						<ul>
+							<li><a href="#0">Link</a></li>
+							<li><a href="#0">Link</a></li>
+							<li><a href="#0">Link</a></li>
+						</ul>
+					</li>
+
+				</ul>
+			</li>
+  			<li><a href="#0">Link</a></li>
+			<li><a href="#0">Link</a></li>
+  		</ul>
+	</li>
+
+	<li class="has-children">
+		<input type="checkbox" name="nav-3" id="nav-3">
+		<label for="nav-3">nav 3</label>
+		<ul>
+			<li class="has-children">
+				<input type="checkbox" name ="nav-3-0" id="nav-3-0">
+				<label for="nav-3-0">nav 3 0</label>
+				<ul>
+					<li><a href="#0">Link</a></li>
+					<li><a href="#0">Link</a></li>
+					<li><a href="#0">Link</a></li>
+
+					<li class="has-children">
+		  				<input type="checkbox" name ="nav-3-0-0" id="nav-3-0-0">
+						<label for="nav-3-0-0">nav 3 0 0</label>
+						<ul>
+							<li><a href="#0">Link</a></li>
+							<li><a href="#0">Link</a></li>
+							<li><a href="#0">Link</a></li>
+						</ul>
+					</li>
+
+				</ul>
+			</li>
+  			<li><a href="#0">Link</a></li>
+			<li><a href="#0">Link</a></li>
+  		</ul>
+	</li>
+
+	<li class="has-children">
+		<input type="checkbox" name="nav-4" id="nav-4">
+		<label for="nav-4">nav 4</label>
+		<ul>
+			<li class="has-children">
+				<input type="checkbox" name ="nav-4-0" id="nav-4-0">
+				<label for="nav-4-0">nav 4 0</label>
+				<ul>
+					<li><a href="#0">Link</a></li>
+					<li><a href="#0">Link</a></li>
+					<li><a href="#0">Link</a></li>
+
+					<li class="has-children">
+		  				<input type="checkbox" name ="nav-4-0-0" id="nav-4-0-0">
+						<label for="nav-4-0-0">nav 4 0 0</label>
+						<ul>
+							<li><a href="#0">Link</a></li>
+							<li><a href="#0">Link</a></li>
+							<li><a href="#0">Link</a></li>
+						</ul>
+					</li>
+
+				</ul>
+			</li>
+  			<li><a href="#0">Link</a></li>
+			<li><a href="#0">Link</a></li>
+  		</ul>
+	</li>
+
+
+</ul>
+
+<!--     <ul>
         <li class='primeiro_nivel'>
             <a href="#">Marco Regulatório</a>
             <ul>
@@ -53,6 +203,7 @@
                 </li>
             </ul>
         </li>
+
         <li class='primeiro_nivel'><a href="#">Estruturação Territorial</a>
             <ul>
                 <li class="segundo_nivel"><a href="http://gestaourbana.prefeitura.sp.gov.br/estruturacao-territorial/eixos-de-transformacao/">Eixos de Transformação</a>
@@ -193,6 +344,6 @@
                 <li class='segundo_nivel'><a href="http://dados.prefeitura.sp.gov.br/">Dados Abertos</a></li>
             </ul>
         </li>
-    </ul>
+    </ul> -->
 </nav>
 </div>
