--- a/gestaourbana/templates/includes/header.html
+++ b/gestaourbana/templates/includes/header.html
@@ -3,7 +3,7 @@
 <header class="row">
     <div class="nine columns">
         <div id="logos">
-            <img id="logo" src="{% static 'img/logo_gestao.jpg' %}" alt="Gestão Urbana">
+            <a href="/"><img id="logo" src="{% static 'img/logo_gestao.jpg' %}" alt="Gestão Urbana"></a>
             <img id="logo-prefeitura" src="{% static 'img/logo_prefeitura.jpg' %}" alt="Prefeitura de São Paulo">
         </div>        
         <ul id="languages">
@@ -12,6 +12,6 @@
         </ul>
     </div>
     <div class="three columns">
-        <p><a href="https://www.facebook.com/PrefSP.smul"><i class="fa fa-question-circle-o fa-lg"></i>Entenda</a></p>
+        <p><a href="/"><i class="fa fa-question-circle-o fa-lg"></i>Entenda</a></p>
     </div>
 </header>
