--- a/gestaourbana/templates/includes/footer.html
+++ b/gestaourbana/templates/includes/footer.html
@@ -2,7 +2,7 @@
 
 <footer class="row">
     <div class="columns three">
-        <img src="{% static 'img/logo_gestao.jpg' %}" alt="Gestão Urbana">
+        <a href="/"><img src="{% static 'img/logo_gestao.jpg' %}" alt="Gestão Urbana"></a>
         <img src="{% static 'img/logo_prefeitura.jpg' %}" alt="Prefeitura de São Paulo">
     </div>
     <div class="columns five">
@@ -23,6 +23,7 @@
             <li><a href="https://www.facebook.com/PrefSP.smul"><i class="fa fa-facebook-official fa-lg"></i></a></li>
             <li><a href="https://twitter.com/PrefSP_smul"><i class="fa fa-twitter fa-lg"></i></a></li>
             <li><a href="http://www.youtube.com/user/pmspsmdu"><i class="fa fa-youtube fa-lg"></i></a></li>
+            <li><a href="/rss"><i class="fa fa-rss fa-lg"></i></a></li>
         </ul>
         <p>
             Todo o conteúdo do site está disponível sob licença Creative Commons. Acesse a página <a href="">Desenvolvimento</a> e saiba mais. 
