nav pronta para telas maiores que 1200px

--- a/gestaourbana/static/css/src/main.scss
+++ b/gestaourbana/static/css/src/main.scss
@@ -1,29 +1,12 @@
+@import '../vendor/variables.scss';
 @import '../vendor/font-awesome.scss';
 @import '../vendor/normalize.scss';
 @import '../vendor/skeleton.scss';
 @import '../vendor/nav_menu.scss';
 
-/* 
- * Variables
- */ 
-
-$main-color: rgba(215, 50, 47, 1);
-$main-text-color: rgba(51, 51, 51, 1);
-$secondary-text-color: rgba(151, 151, 151, 1);
-
-$category-red: rgba(200, 25, 23, 1);
-$category-pink: rgba(192, 67, 145, 1);
-$category-yellow: rgba(254, 204, 3, 1);
-$category-cyan: rgba(31, 172, 227, 1);
-$category-green: rgba(71, 174, 83, 1);
-
-$title-font: "Roboto", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-$text-font: "Georgia", Times, "Times New Roman", serif;
-
 /*
  * Base
  */
-
 a {
 	color: $main-color;
 	text-decoration: none;
@@ -52,7 +35,6 @@ h6 {
 /*
  * Header
  */
-
 header {
 	font-size: 1em;
 
@@ -140,3 +122,4 @@ footer {
 		width: 90%;
 	}
 }
+
