--- a/gestaourbana/templates/includes/nav_menu.html
+++ b/gestaourbana/templates/includes/nav_menu.html
@@ -3,138 +3,101 @@
 <div id="menu_container">
 	<nav>
 	<div id='logo'><a href="http://localhost:8000"><img id="logo" src="{% static 'img/logo_gestao.svg' %}" alt="Gestão Urbana"></a></div>
-		<ul class="nav-menu">
-			<li class="has-children">
-				<input type="checkbox" name="nav-0" id="nav-0">
-				<label for="nav-0">Marco Regulatório</label>
+		<ul id="nav-menu">
+
+			<li id='nav-0' class="expansor">nav 0</li>
+			<ul>
+				<li class="expansor">nav 0 0</li>
 				<ul>
-					<li class="has-children">
-						<input type="checkbox" name ="nav-0-0" id="nav-0-0">
-						<label for="nav-0-0">nav 0 0</label>
-						<ul>
-							<li><a href="#0">Link</a></li>
-							<li><a href="#0">Link</a></li>
-							<li><a href="#0">Link</a></li>
-							<li class="has-children">
-				  				<input type="checkbox" name ="nav-0-0-0" id="nav-0-0-0">
-								<label for="nav-0-0-0">nav 0 0 0</label>
-								<ul>
-									<li><a href="#0">Link</a></li>
-									<li><a href="#0">Link</a></li>
-									<li><a href="#0">Link</a></li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-		  			<li><a href="#0">Link</a></li>
 					<li><a href="#0">Link</a></li>
-		  		</ul>
-			</li>
-			<li class="has-children">
-				<input type="checkbox" name="nav-1" id="nav-1">
-				<label for="nav-1">Estruturação Metropolitana</label>
+					<li><a href="#0">Link</a></li>
+					<li><a href="#0">Link</a></li>
+					<li class="expansor">nav 0 0 0</li>
+					<ul>
+						<li><a href="#0">Link</a></li>
+						<li><a href="#0">Link</a></li>
+						<li><a href="#0">Link</a></li>
+					</ul>
+				</ul>
+		 			<li><a href="#0">Link</a></li>
+				<li><a href="#0">Link</a></li>
+		 	</ul>
+
+			<li id='nav-1' class="expansor">nav 1</li>
+			<ul>
+				<li class="expansor">nav 1 0</li>
+				<ul class='expanded'>
+					<li><a href="#0">Link</a></li>
+					<li><a href="#0">Link</a></li>
+					<li><a href="#0">Link</a></li>
+					<li class="expansor">nav 1 0 0</li>
+					<ul>
+						<li><a href="#0">Link</a></li>
+						<li><a href="#0">Link</a></li>
+						<li><a href="#0">Link</a></li>
+					</ul>
+				</ul>
+		 			<li><a href="#0">Link</a></li>
+				<li><a href="#0">Link</a></li>
+		 	</ul>
+	
+			<li id='nav-2' class="expansor">nav 2</li>
+			<ul>
+				<li class="expansor">nav 2 0</li>
 				<ul>
-					<li class="has-children">
-						<input type="checkbox" name ="nav-1-0" id="nav-1-0">
-						<label for="nav-1-0">nav 1 0</label>
-						<ul>
-							<li><a href="#0">Link</a></li>
-							<li><a href="#0">Link</a></li>
-							<li><a href="#0">Link</a></li>
-							<li class="has-children">
-				  				<input type="checkbox" name ="nav-1-0-0" id="nav-1-0-0">
-								<label for="nav-1-0-0">nav 1 0 0</label>
-								<ul>
-									<li><a href="#0">Link</a></li>
-									<li><a href="#0">Link</a></li>
-									<li><a href="#0">Link</a></li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-		  			<li><a href="#0">Link</a></li>
 					<li><a href="#0">Link</a></li>
-		  		</ul>
-			</li>
-			<li class="has-children">
-				<input type="checkbox" name="nav-2" id="nav-2">
-				<label for="nav-2">Projetos Urbanos</label>
+					<li><a href="#0">Link</a></li>
+					<li><a href="#0">Link</a></li>
+					<li class="expansor">nav 2 0 0</li>
+					<ul>
+						<li><a href="#0">Link</a></li>
+						<li><a href="#0">Link</a></li>
+						<li><a href="#0">Link</a></li>
+					</ul>
+				</ul>
+		 			<li><a href="#0">Link</a></li>
+				<li><a href="#0">Link</a></li>
+		 	</ul>
+
+			<li id='nav-3' class="expansor">nav 3</li>
+			<ul>
+				<li class="expansor">nav 3 0</li>
 				<ul>
-					<li class="has-children">
-						<input type="checkbox" name ="nav-2-0" id="nav-2-0">
-						<label for="nav-2-0">nav 2 0</label>
-						<ul>
-							<li><a href="#0">Link</a></li>
-							<li><a href="#0">Link</a></li>
-							<li><a href="#0">Link</a></li>
-							<li class="has-children">
-				  				<input type="checkbox" name ="nav-2-0-0" id="nav-2-0-0">
-								<label for="nav-2-0-0">nav 2 0 0</label>
-								<ul>
-									<li><a href="#0">Link</a></li>
-									<li><a href="#0">Link</a></li>
-									<li><a href="#0">Link</a></li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-		  			<li><a href="#0">Link</a></li>
 					<li><a href="#0">Link</a></li>
-		  		</ul>
-			</li>
-			<li class="has-children">
-				<input type="checkbox" name="nav-3" id="nav-3">
-				<label for="nav-3">Bordas da cidade</label>
+					<li><a href="#0">Link</a></li>
+					<li><a href="#0">Link</a></li>
+					<li class="expansor">nav 3 0 0</li>
+					<ul>
+						<li><a href="#0">Link</a></li>
+						<li><a href="#0">Link</a></li>
+						<li><a href="#0">Link</a></li>
+					</ul>
+				</ul>
+		 			<li><a href="#0">Link</a></li>
+				<li><a href="#0">Link</a></li>
+		 	</ul>
+
+
+			<li id='nav-4' class="expansor">nav 4</li>
+			<ul>
+				<li class="expansor">nav 4 0</li>
 				<ul>
-					<li class="has-children">
-						<input type="checkbox" name ="nav-3-0" id="nav-3-0">
-						<label for="nav-3-0">nav 3 0</label>
-						<ul>
-							<li><a href="#0">Link</a></li>
-							<li><a href="#0">Link</a></li>
-							<li><a href="#0">Link</a></li>
-							<li class="has-children">
-				  				<input type="checkbox" name ="nav-3-0-0" id="nav-3-0-0">
-								<label for="nav-3-0-0">nav 3 0 0</label>
-								<ul>
-									<li><a href="#0">Link</a></li>
-									<li><a href="#0">Link</a></li>
-									<li><a href="#0">Link</a></li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-		  			<li><a href="#0">Link</a></li>
 					<li><a href="#0">Link</a></li>
-		  		</ul>
-			</li>
-			<li class="has-children">
-				<input type="checkbox" name="nav-4" id="nav-4">
-				<label for="nav-4">Acervo Urbano</label>
-				<ul>
-					<li class="has-children">
-						<input type="checkbox" name ="nav-4-0" id="nav-4-0">
-						<label for="nav-4-0">nav 4 0</label>
-						<ul>
-							<li><a href="#0">Link</a></li>
-							<li><a href="#0">Link</a></li>
-							<li><a href="#0">Link</a></li>
-							<li class="has-children">
-				  				<input type="checkbox" name ="nav-4-0-0" id="nav-4-0-0">
-								<label for="nav-4-0-0">nav 4 0 0</label>
-								<ul>
-									<li><a href="#0">Link</a></li>
-									<li><a href="#0">Link</a></li>
-									<li><a href="#0">Link</a></li>
-								</ul>
-							</li>
-						</ul>
-					</li>
-		  			<li><a href="#0">Link</a></li>
 					<li><a href="#0">Link</a></li>
-		  		</ul>
-			</li>
+					<li><a href="#0">Link</a></li>
+					<li class="expansor">nav 4 0 0</li>
+					<ul>
+						<li><a href="#0">Link</a></li>
+						<li><a href="#0">Link</a></li>
+						<li><a href="#0">Link</a></li>
+					</ul>
+				</ul>
+		 			<li><a href="#0">Link</a></li>
+				<li><a href="#0">Link</a></li>
+		 	</ul>
+
 		</ul>
+
 		<div id='rodape'>
 				<ul id='termos-contato'>
 					<li><a href="">Termos</a></li>
