--- a/gestaourbana/templates/includes/header.html
+++ b/gestaourbana/templates/includes/header.html
@@ -3,7 +3,7 @@
 <header class="row">
     <div class="nine columns">
         <div id="logos">
-            <img id="logo-prefeitura" src="{% static 'img/logo_prefeitura.jpg' %}" alt="Prefeitura de São Paulo">
+            <a href="/" tabindex="0"><img id="logo-prefeitura" src="{% static 'img/logo_prefeitura.jpg' %}" alt="Prefeitura de São Paulo"></a>
         </div>        
         <ul id="languages">
             <li><a href="">English</a></li>
