--- a/gestaourbana/static/css/src/nav_menu.scss
+++ b/gestaourbana/static/css/src/nav_menu.scss
@@ -1,34 +1,3 @@
-#menu_container{
-	padding:0px;
-	ul li{
-		list-style: none;
-		text-decoration: none;
-	}
-	li {
-		border-top:1px solid $nav-hairline; 
-		padding:5px;
-		cursor: pointer;
-		min-height: 45px;
-		ul{
-			margin: 0 0 0 15px;
-		}
-	}
-	#logo{
-		width: 150px;
-		height: 81px;
-		padding-left: 14px;
-	}
-
-	// peekaboo for listitems
-	.expansor ~ ul{
-		display:none;
-		overflow: hidden;
-	}
-	ul.expanded{
-		display:block;
-	}
-}
-
 .nav_itens_common{
 	margin: 0;
 	border-left: 10px solid;
@@ -43,10 +12,6 @@
 #nav-0:hover{
 	border-color:$nav-first-section-color-hover;
 }
-#nav-0 ul>li{
-	border-top:1px solid pink; 
-}
-
 
 //segunda seção
 #nav-1{
@@ -66,12 +31,11 @@
 	border-color:$nav-third-section-color-hover;
 }
 
-// //quarta seção
+//quarta seção
 #nav-3{
 	@extend .nav_itens_common;
 	border-color:$nav-fourth-section-color
 }
-
 #nav-3:hover{
 	border-color:$nav-fourth-section-color-hover;
 }
@@ -81,36 +45,120 @@
 	@extend .nav_itens_common;	
 	border-color:$nav-fifth-section-color
 }
-
 #nav-4:hover{
 	border-color:$nav-fifth-section-color-hover;
 }
 
-/* Media queries
-/* Mobile first queries */
 
-/* Larger than mobile */
-@media (min-width: 400px) {}
+#menu_container{
+	width: 90%;
+	margin: 0 auto;
+	padding:0px;
+	ul li{
+		list-style: none;
+		text-decoration: none;
+	}
+	li {
+		border-top: solid 1px $nav-hairline; 
+		padding:5px;
+		cursor: pointer;
+		min-height: 45px;
+		ul{
+			margin: 0 0 0 15px;
+		}
+	}
+	#logo{
+		padding:29px 0 20px 0;
+	}
+
+	// peekaboo for listitems
+	.expansor ~ ul{
+		display:none;
+		overflow: hidden;
+	}
+	ul.expanded{
+		display:block;
+	}
+
+	#rodape{
+		li{
+			float: left;
+			border:0;
+			padding-right:15px;
+			min-height:25px;
+		}
+	}
+
+}
+
+/* Media queries */
+/* Smaller than mobile */
+@media (max-width: 400px) {
+	header .columns.nine > #logos{
+		display: none;
+	}
+
+	header.row{
+		margin-bottom:52px;	
+	}
+	header .columns.nine{
+		max-width: 160px;
+		position: absolute;
+		top:25px;
+		left: 0;
+	}
+
+	header div.three.columns{
+		margin-left: 0;
+		position: absolute;
+		max-width: 122px;
+		top: 25px;
+		right: 5%;
+	}
+
+	#menu_container #rodape #termos-contato li{
+		padding-left:0;
+	}
+	#menu_container #rodape #social-media li{
+		float: right;
+		padding-right:0;
+		padding-left:15px;
+	}
+
+	#menu_container{
+		width: 85%;
+		nav {
+			#nav-menu{
+				margin-bottom: 0px;
+				padding-bottom: 25px;
+				border-bottom: solid 1px $nav-hairline;
+			}
+		}
+	}
+}
+
 
 /* Larger than phablet */
-@media (min-width: 550px) {}
+@media (min-width: 550px) {
+	#menu_container{
+		width: 80%;
+	}
+}
 
 /* Larger than tablet */
-@media (min-width: 750px) {}
-
-/* Larger than desktop */
-@media (min-width: 1000px) {}
-
-
-/* Larger than Desktop HD */
-@media (min-width: 1220px) {
+@media (min-width: 750px) {
 	body{
-		max-width: 1220px;
+		max-width: 750px;
 		margin: 0 auto;
 	}
+	div.container{
+		margin: 0 0 0 auto;
+		max-width: 510px;
+	}
+
 	#menu_container{
 		position: fixed;
-		width: 240px;
+		width: 220px;
 		border-right: solid 1px $nav-hairline;
 		height: 100%;
 		overflow-y:auto;
@@ -129,13 +177,30 @@
 			width: 100%;
 			padding: 20px 0;
 			li{
-				border:0;
-				padding:0;
-				min-height:25px; 
+				float:none;
 			}
 		}
 	}
+}
+
+/* Larger than desktop */
+@media (min-width: 1000px) {
+	body{
+		max-width: 1000px;
+	}
 	div.container{
 		margin: 0 0 0 auto;
+		max-width: 760px;
+	}
+}
+
+/* Larger than Desktop HD */
+@media (min-width: 1200px) {
+	body{
+		max-width: 1200px;
+	}
+	div.container{
+		margin: 0 0 0 auto;
+		max-width: 960px;
 	}
 }
