--- a/gestaourbana/templates/includes/nav_menu.html
+++ b/gestaourbana/templates/includes/nav_menu.html
@@ -2,9 +2,8 @@
 
 <div id="menu_container">
 	<nav>
-	<div id='logo'><a href="http://localhost:8000"><img id="logo" src="{% static 'img/logo_gestao.svg' %}" alt="Gestão Urbana"></a></div>
+	<div id='logo'><a href="http://localhost:8000"><img src="{% static 'img/logo_gestao.svg' %}" alt="Gestão Urbana"></a></div>
 		<ul id="nav-menu">
-
 			<li id='nav-0' class="expansor">nav 0</li>
 			<ul>
 				<li class="expansor">nav 0 0</li>
@@ -26,7 +25,7 @@
 			<li id='nav-1' class="expansor">nav 1</li>
 			<ul>
 				<li class="expansor">nav 1 0</li>
-				<ul class='expanded'>
+				<ul>
 					<li><a href="#0">Link</a></li>
 					<li><a href="#0">Link</a></li>
 					<li><a href="#0">Link</a></li>
