Mediaqueries done. Fixing keyboard navigation issues

--- a/gestaourbana/static/css/src/main.scss
+++ b/gestaourbana/static/css/src/main.scss
@@ -60,7 +60,7 @@ header {
 		}
 	}
 
-	#logos {
+	#pmsp {
 		display: inline-block;
 
 		img {
@@ -71,7 +71,7 @@ header {
 	#languages {
 		display: inline-block;
 		margin-bottom: 0;
-		margin-left: 1.5em;
+		margin-left: 0;
 
 		li {
 			display: inline-block;
