--- a/gestaourbana/templates/includes/header.html
+++ b/gestaourbana/templates/includes/header.html
@@ -2,7 +2,7 @@
 
 <header class="row">
     <div class="nine columns">
-        <div id="logos">
+        <div id="pmsp">
             <a href="/" tabindex="0"><img id="logo-prefeitura" src="{% static 'img/logo_prefeitura.jpg' %}" alt="Prefeitura de São Paulo"></a>
         </div>        
         <ul id="languages">
@@ -10,7 +10,7 @@
             <li><a href="">Español</a></li>
         </ul>
     </div>
-    <div class="three columns">
+    <div  id="entenda" class="three columns">
         <p><a href="/"><i class="fa fa-question-circle-o fa-lg"></i>Entenda</a></p>
     </div>
 </header>
