--- a/gestaourbana/templates/includes/nav_menu.html
+++ b/gestaourbana/templates/includes/nav_menu.html
@@ -3,8 +3,12 @@
 <div id="menu_container">
 	<nav>
 	<div id='logo'><a href="http://localhost:8000"><img src="{% static 'img/logo_gestao.svg' %}" alt="Gestão Urbana"></a></div>
+	<button class='button-primary menu_btn' name="open_menu">
+		<span>Menu</span>
+		<span class="open"><i class="fa fa-times" aria-hidden="true"></i></span>
+	</button>
 		<ul id="nav-menu">
-			<li id='nav-0' class="expansor">nav 0</li>
+			<li id='nav-0' class="expansor" tabindex="100">nav 0</li>
 			<ul>
 				<li class="expansor">nav 0 0</li>
 				<ul>
@@ -22,7 +26,7 @@
 				<li><a href="#0">Link</a></li>
 		 	</ul>
 
-			<li id='nav-1' class="expansor">nav 1</li>
+			<li id='nav-1' class="expansor" tabindex="200">nav 1</li>
 			<ul>
 				<li class="expansor">nav 1 0</li>
 				<ul>
@@ -40,7 +44,7 @@
 				<li><a href="#0">Link</a></li>
 		 	</ul>
 	
-			<li id='nav-2' class="expansor">nav 2</li>
+			<li id='nav-2' class="expansor" tabindex="300">nav 2</li>
 			<ul>
 				<li class="expansor">nav 2 0</li>
 				<ul>
@@ -58,7 +62,7 @@
 				<li><a href="#0">Link</a></li>
 		 	</ul>
 
-			<li id='nav-3' class="expansor">nav 3</li>
+			<li id='nav-3' class="expansor" tabindex="400">nav 3</li>
 			<ul>
 				<li class="expansor">nav 3 0</li>
 				<ul>
@@ -77,7 +81,7 @@
 		 	</ul>
 
 
-			<li id='nav-4' class="expansor">nav 4</li>
+			<li id='nav-4' class="expansor" tabindex="500">nav 4</li>
 			<ul>
 				<li class="expansor">nav 4 0</li>
 				<ul>
