Adiciona funcionalidade de comentarios as paginas de noticias

--- a/gestaourbana/templates/base.html
+++ b/gestaourbana/templates/base.html
@@ -23,6 +23,7 @@
 
         {# Global stylesheets #}
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'fluent_comments/css/ajaxcomments.css' %}" />
     </head>
 
     <body class="{% block body_class %}{% endblock %}">
