--- a/news/templates/news/news_page.html
+++ b/news/templates/news/news_page.html
@@ -2,9 +2,13 @@
 
 {% load wagtailcore_tags wagtailimages_tags %}
 
+{% load comments static %}
+
 {% block body_class %}template-blogpage{% endblock %}
 
 {% block content %}
+    <p><a href="{{ page.get_parent.url }}">Retornar para página de notícias</a></p>
+    
 	<h1>{{ page.title }}</h1>
 	<p class="meta">{{ page.date }}</p>
 
@@ -39,7 +43,8 @@
             <div>{{ block }}</div>
         {% endif %}
     {% endfor %}
-
-	<p><a href="{{ page.get_parent.url }}">Retornar para página de notícias</a></p>
+    
+    {% render_comment_form for page %}
+    {% render_comment_list for page %}
 
 {% endblock %}
